--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -5,7 +5,7 @@ name: CI Airflow Quality Checks
 
 on:
   pull_request:
-    branches: [ main, desarrollo ]
+    branches: [ main ]
   push:
     branches: [ main ]
 #mimimim
