PRUEBA WORKFLOW PARSE

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -4,10 +4,10 @@
 name: CI Airflow Quality Checks
 
 on:
-  pull_request:
-    branches: [ main ]
-  push:
-    branches: [ main ]
+  #pull_request:
+  #  branches: [ main ]
+  #push:
+  #  branches: [ main ]
 #mimimim
 jobs:
   quality-assurance:
