--- a/.github/workflows/ci-parse.yml
+++ b/.github/workflows/ci-parse.yml
@@ -7,8 +7,12 @@ on:
   push:
     branches: [ desarrollo ]
   paths:
+    # GitHub Actions usa forward slashes (/) incluso para carpetas con nombres complejos
     - 'parsing/Proyecto-Apache-Airflow-main/etls/XMLs/*.xml'
-    - 'parsing/Proyecto-Apache-Airflow-main/etls_extraccion/XMLs/*.xml' # Carpetas de XML Inputs en etls y etls_extraccion
+    - 'parsing/Proyecto-Apache-Airflow-main/etls_extraccion/XMLs/*.xml'
+    # Agregamos patrones recursivos por si la estructura varía levemente
+    - '**/etls/XMLs/**'
+    - '**/etls_extraccion/XMLs/**'
   workflow_dispatch:
 
 permissions:
