--- a/.github/workflows/ci-parse.yml
+++ b/.github/workflows/ci-parse.yml
@@ -37,6 +37,12 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip' # Cache para acelerar instalaciones futuras
+      
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install openai
+          # pip install -r requirements.txt
 
       # Paso 3: Correr el script (con failover en caso de errores de API)
       - name: Run Parser with Environment Failover
